# sex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/core/: AboutWindow.cpp  AboutWindow.h  App.cpp  App.h  CMakeLists.txt  FileOpenDialog.cpp  FileOpenDialog.h  FileView.cpp  FileView.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  main.cpp
